--- a/BookManagerApi/appsettings.json
+++ b/BookManagerApi/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "BookManagerApi": "server=localhost; database=bookshop;user=bookmanagerapi;password=apiuser123"
+  }
 }
 
