Testing/Deveopment Env set

--- a/BookManagerApi/appsettings.json
+++ b/BookManagerApi/appsettings.json
@@ -5,10 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-
-    "BookManagerApi": "server=localhost; database=bookshop;user=bookmanagerapi;password=apiuser123"
-  }
+  "AllowedHosts": "*"
 }
 
